--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-success fs-5 fw-semibold">
         <div class="container-fluid">
           <a class="navbar-brand m-3" href="../index.html">
-            <img src="../assets/img/LogoTCS.png" alt="" width="45" height="45">
+            <img src="./assets/img/LogoTCS.png" alt="" width="45" height="45">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
