--- a/vistas/galeria.html
+++ b/vistas/galeria.html
@@ -20,28 +20,28 @@
 <body>
   <header>
     <!--NAVEGACION-->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-success p-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success fs-5 fw-semibold">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../assets/img/LogoTCS.png" alt="" width="35" height="35">
+        <a class="navbar-brand m-3" href="../index.html">
+          <img src="../assets/img/LogoTCS.png" alt="" width="45" height="45">
         </a>
-
-        <button class="navbar-toggler" 
-                type="button" 
-                data-togle="collapse" 
-                data-target="#navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="./galeria.html">Galeria</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="./menu.html">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./galeria.html">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -94,11 +94,11 @@
 
   <!--FOOTER-->
   <div class="container-fluid bg-black p-3">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/index.html" class="gap-2 p-1 m-2 text-muted text-decoration-none 1h-1"></a>
-        <img src="../assets/img/LogoTCS.png" class="logo" height="30" width="30">
-        <span class="mb-3 mb-md-0 text-white text-muted">© The Coffee Shop, 2022</span>
+    <footer class="d-flex flex-wrap justify-content-center align-items-center p-3 border-top">
+      <div class="col-m-4 d-flex align-items-center">
+        <a href="/index.html" class="mb-3 me-2 mb-md-0 text-decoration-none 1h-1"></a>
+        <img src="/assets/img/LogoTCS.png" class="logo m-2" height="35" width="35">
+        <span class="mb-3 mb-md-0 text-white justify-content-center">© The Coffee Shop, 2022</span>
       </div>
     </footer>
   </div>
