--- a/vistas/galeria.html
+++ b/vistas/galeria.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="./menu.html">Menu</a>
+              <a class="nav-link" href="./menu.html">Menú</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -108,17 +108,3 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-<!--
-      <ul class="nav_text">
-          <li><a href="../index.html"> Home </a></li>
-          <li><a href="./menu-cafe.html"> Menú </a></li>
-          <li><a href="./nosotros.html"> Nosotros </a></li>
-          <li><a href="./galeria.html"> Galeria </a></li>
-          <li><a href="./contacto.html"> Contacto </a></li>
-      </ul>
-    </nav>
-  </header>
-  
-    -->
