after after sass

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
     
-    <main class="container container-sm">
+    <main class="container container-md p-0">
       <div class="bg-image img-fluid">
             <div class="box"> 
               <img class="logo" src="./assets/img/LogoTCS.png">
