--- a/index.html
+++ b/index.html
@@ -12,48 +12,45 @@
 
     <!--------- CSS / SASS LINK --------->
     <link rel="stylesheet" href="./css/styles.css">
-
+    
+    <!--------- POPPINS FONT --------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <!--------- SEO --------->
+    <meta name="keywords" content="COFFEE SHOP, COFFEE, CAFÉ, CAFETERÍA, BEBIDAS">
+    <meta name="description" content="El mejor cafe gourmet de la ciudad. Disfruta de un espacio donde puedes estudiar, 
+                                      trabajar o leer un libro en tranquilidad con un buen cafe">
 
-    <title>The Coffee Shop</title>
+    <title>Home • The Coffee Shop</title>
 
 </head>
 <body>
     <header>
       <!--------- NAVEGACION --------->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-success fs-5 fw-semibold">
+      <nav class="navbar navbar-expand-lg navbar-dark fs-5 fw-semibold">
         <div class="container-fluid">
           <a class="navbar-brand m-3" href="../index.html">
             <img src="./assets/img/LogoTCS.png" alt="" width="45" height="45">
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" 
+                  ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="./vistas/menu.html">Menú</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./vistas/nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./vistas/galeria.html">Galería</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./vistas/contacto.html">Contacto</a>
-              </li>
+              <li class="nav-item"><a class="nav-link" href="./vistas/menu.html">Menú</a></li>
+              <li class="nav-item"><a class="nav-link" href="./vistas/nosotros.html">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="./vistas/galeria.html">Galería</a></li>
+              <li class="nav-item"><a class="nav-link" href="./vistas/contacto.html">Contacto</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    
+    <!--------- CONTENIDO --------->
     <main class="container container-md p-0">
       <div class="bg-image img-fluid">
             <div class="box"> 
@@ -68,8 +65,7 @@
     <div class="container-fluid bg-black p-3">
       <footer class="d-flex flex-wrap justify-content-center align-items-center p-3 border-top">
         <div class="col-m-4 d-flex align-items-center">
-          <a href="/index.html" class="mb-3 me-2 mb-md-0 text-decoration-none 1h-1"></a>
-          <img src="./assets/img/LogoTCS.png" class="logo m-2" height="35" width="35">
+          <img src="./assets/img/LogoTCS.png" class="logo m-2">
           <span class="mb-3 mb-md-0 text-white justify-content-center">© The Coffee Shop, 2022</span>
         </div>
       </footer>
