--- a/vistas/galeria.html
+++ b/vistas/galeria.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
-    crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+  <!--------- BOOSTRAP LINK CSS --------->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
+  rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
+  crossorigin="anonymous">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <!--------- CSS / SASS LINK --------->
+  <link rel="stylesheet" href="../css/styles.css">
+
+  <!--------- POPPINS FONT --------->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+  <!--------- SEO --------->
+  <meta name="keywords" content="COFFEE SHOP, COFFEE, CAFÉ, CAFETERÍA, BEBIDAS">
+  <meta name="description" content="El mejor cafe gourmet de la ciudad. Disfruta de un espacio donde puedes estudiar, 
+                                    trabajar o leer un libro en tranquilidad con un buen cafe">
 
     <title>Galería • The Coffee Shop</title>
 </head>
 
 <body>
   <header>
-    <!--NAVEGACION-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success fs-5 fw-semibold">
+    <!--------- NAVEGACION --------->
+    <nav class="navbar navbar-expand-lg navbar-dark fs-5 fw-semibold">
       <div class="container-fluid">
         <a class="navbar-brand m-3" href="../index.html">
           <img src="../assets/img/LogoTCS.png" alt="" width="45" height="45">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" 
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="./menu.html">Menú</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./galeria.html">Galería</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="./menu.html">Menú</a></li>
+            <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="./galeria.html">Galería</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -49,62 +51,55 @@
   </header>
 
   <main>
-
+    <!--------- CONTENEDORES DE GALERIA --------->
     <div class="galery-container">
 
       <div class="item">
         <img src="../assets/img/coffee_cream.jpg" 
-        alt="Coffee Cream"
-        title="Café con crema"
-        class="img_galery">
+        alt="Coffee Cream" title="Café con crema" class="img_galery">
       </div>
 
        <div class="item">
-        <img src="../assets/img/coffee_variety.jpg" alt="Coffee Variety"
-        title="Variedad de café"
-        class="img_galery">
+        <img src="../assets/img/coffee_variety.jpg" 
+        alt="Coffee Variety" title="Variedad de café" class="img_galery">
       </div>
 
        <div class="item">
-        <img src="../assets/img/coffee-beans.jpg" alt="Coffee Beans"
-        title="Granos de café"
-        class="img_galery">
+        <img src="../assets/img/coffee-beans.jpg" 
+        alt="Coffee Beans" title="Granos de café" class="img_galery">
       </div>
 
       <div class="item">
         <img src="../assets/img/handsCoffeeBeans.jpg" alt="Hands holding coffee beans"
-        title="Sosteniendo granos de café con las manos"
-        class="img_galery">
+        title="Sosteniendo granos de café con las manos" class="img_galery">
       </div>
 
       <div class="item">
-        <img src="../assets/img/fresh_press.jpg" alt="French Press"
-        title="Prensa Francesa"
-        class="img_galery">
+        <img src="../assets/img/fresh_press.jpg" 
+        alt="French Press" title="Prensa Francesa" class="img_galery">
       </div>
 
       <div class="item">
         <img src="..//assets/img/3coffee.jpg" alt="Beverages"
-        title="Diferentes tipos de bebidas a base de café"
-        class="img_galery">
+        title="Diferentes tipos de bebidas a base de café" class="img_galery">
       </div>
     </div>
   </main>
 
 
-  <!--FOOTER-->
+  <!--------- FOOTER --------->
   <div class="container-fluid bg-black p-3">
     <footer class="d-flex flex-wrap justify-content-center align-items-center p-3 border-top">
       <div class="col-m-4 d-flex align-items-center">
-        <a href="/index.html" class="mb-3 me-2 mb-md-0 text-decoration-none 1h-1"></a>
-        <img src="/assets/img/LogoTCS.png" class="logo m-2" height="35" width="35">
+        <img src="../assets/img/LogoTCS.png" class="logo m-2">
         <span class="mb-3 mb-md-0 text-white justify-content-center">© The Coffee Shop, 2022</span>
       </div>
     </footer>
   </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
-    crossorigin="anonymous"></script>
+
+  <!--------- BOOSTRAP LINK JAVASCRIPT --------->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
+  crossorigin="anonymous"></script>
 </body>
 </html>
