--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--------- AOS ANIMATION LINK CSS --------->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!--------- BOOSTRAP LINK CSS --------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
@@ -13,10 +16,10 @@
     <!--------- CSS / SASS LINK --------->
     <link rel="stylesheet" href="./css/styles.css">
     
-    <!--------- POPPINS FONT --------->
+    <!--------- MONTSERRAT FONT --------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
 
     <!--------- SEO --------->
     <meta name="keywords" content="COFFEE SHOP, COFFEE, CAFÉ, CAFETERÍA, BEBIDAS">
@@ -55,7 +58,7 @@
       <div class="bg-image img-fluid">
             <div class="box"> 
               <img class="logo" src="./assets/img/LogoTCS.png">
-              <h1 class="color-overlay text-center fw-bold text-white">The Coffee Shop</h1>
+              <h1 class="color-overlay text-center text-white m-1">The Coffee Shop</h1>
               <p class="color-overlay fst-italic text-center text-white">¿Listo para despertar?</p>
             </div>
       </div>
@@ -75,6 +78,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
     crossorigin="anonymous"></script>
+
+    <!--------- AOS ANIMATION LINK JAVASCRIPT --------->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   
 </body>
 </html>
