--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--------- AOS ANIMATION LINK CSS --------->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!--------- BOOSTRAP LINK CSS --------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
@@ -13,10 +16,10 @@
     <!--------- CSS / SASS LINK --------->
     <link rel="stylesheet" href="../css/styles.css">
 
-    <!--------- POPPINS FONT --------->
+    <!--------- MONTSERRAT FONT --------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
 
     <!--------- SEO --------->
     <meta name="keywords" content="COFFEE SHOP, COFFEE, CAFÉ, CAFETERÍA, BEBIDAS">
@@ -53,10 +56,10 @@
   <!--------- FORMULARIO DE CONTACTO --------->
   <div>
     <h1 class="titulo">Contacto</h1>
-    <h2 class="text-center">Dejanos tu comentario, sugerencia, queja, o chismesito aqui:</h2>
-</div>
+    <h2 class="text-center">Déjanos tu comentario, sugerencia, queja, o chismesito aqui:</h2>
+  </div>
 <main class="contacto">
-  <section class="container-md"> <!-- Contenedor Izquierdo-->
+  <section class="container-md" data-aos="fade-right"> <!-- Contenedor Izquierdo-->
     <form class="row">
       <div class="col">
       <div class="my-4">
@@ -77,7 +80,7 @@
     </form> 
   </section> 
 
-  <section class="container-md"> <!-- Contenedor Derecho-->
+  <section class="container-md" data-aos="fade-left"> <!-- Contenedor Derecho-->
     <form class="row">
       <div class="col"> 
 
@@ -138,5 +141,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
   crossorigin="anonymous"></script>
+
+  <!--------- AOS ANIMATION LINK JAVASCRIPT --------->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  
 </body>
 </html>
