--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@
     </header>
 
     <!--------- CONTENIDO --------->
-    <main class="container container-md p-0">
-      <div class="bg-image img-fluid">
-            <div class="box"> 
-              <img class="logo" src="./assets/img/LogoTCS.png">
-              <h1 class="color-overlay text-center text-white m-1">The Coffee Shop</h1>
-              <p class="color-overlay fst-italic text-center text-white">¿Listo para despertar?</p>
-            </div>
+    <main>
+      <div class="container">
+      <div class="bg-image img-fluid"></div>
+
+      <div  class="content-center">
+        <img class="logo" src="./assets/img/LogoTCS.png">
+        <h1 class="color-overlay text-white m-1">The Coffee Shop</h1>
+        <p class="color-overlay fst-italic text-white">¿Listo para despertar?</p>
       </div>
+
+    </div>
   </main>            
     
     <!--------- FOOTER --------->
@@ -80,10 +83,10 @@
     crossorigin="anonymous"></script>
 
     <!--------- AOS ANIMATION LINK JAVASCRIPT --------->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   
 </body>
 </html>
