--- a/vistas/galeria.html
+++ b/vistas/galeria.html
@@ -56,39 +56,45 @@
   <main>
     <div>
       <h1 class="titulo">Galería</h1>
-      <h2 class="text-center">Trabajo, estudio o disfrutar con amigos, The Coffee Shop es el lugar ideal.<br>¡Ven y Conócenos!</h2>
+      <h2 class="text-center">Trabajo, estudio o disfrutar con amigos, <br>The Coffee Shop es el lugar ideal.<br>¡Ven y Conócenos!</h2>
     </div>
     <!--------- CONTENEDORES DE GALERIA --------->
     <div class="galery-container">
 
-      <div class="item">
+      <div class="img_item">
         <img src="../assets/img/coffee_cream.jpg" data-aos="fade-down" 
-        alt="Coffee Cream" title="Café con crema" class="img_galery">
+        alt="Coffee Cream" title="Café con crema" class="img_gallery">
+        <h3 class="img_title">Recetas</h3>
       </div>
 
-       <div class="item">
+       <div class="img_item">
         <img src="../assets/img/coffee_variety.jpg" data-aos="fade-down"
-        alt="Coffee Variety" title="Variedad de café" class="img_galery">
+        alt="Coffee Variety" title="Variedad de café" class="img_gallery">
+        <h3 class="img_title">Conoce nuestro café</h3>
       </div>
 
-       <div class="item">
+       <div class="img_item">
         <img src="../assets/img/coffee-beans.jpg" data-aos="fade-down"
-        alt="Coffee Beans" title="Granos de café" class="img_galery">
+        alt="Coffee Beans" title="Granos de café" class="img_gallery">
+        <h3 class="img_title">Café con historia</h3>
       </div>
 
-      <div class="item">
+      <div class="img_item">
         <img src="../assets/img/handsCoffeeBeans.jpg" data-aos="fade-down" alt="Hands holding coffee beans"
-        title="Sosteniendo granos de café con las manos" class="img_galery">
+        title="Sosteniendo granos de café con las manos" class="img_gallery">
+        <h3 class="img_title">Café con causa</h3>
       </div>
 
-      <div class="item">
+      <div class="img_item">
         <img src="../assets/img/fresh_press.jpg" data-aos="fade-down"
-        alt="French Press" title="Prensa Francesa" class="img_galery">
+        alt="French Press" title="Prensa Francesa" class="img_gallery">
+        <h3 class="img_title">Instalaciones</h3>
       </div>
 
-      <div class="item">
+      <div class="img_item">
         <img src="..//assets/img/3coffee.jpg" alt="Beverages" data-aos="fade-down"
-        title="Diferentes tipos de bebidas a base de café" class="img_galery">
+        title="Diferentes tipos de bebidas a base de café" class="img_gallery">
+        <h3 class="img_title">Agenda tu Evento</h3>
       </div>
     </div>
   </main>
