--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div  class="content-center">
         <img class="logo" src="./assets/img/LogoTCS.png">
-        <h1 class="color-overlay text-white m-1">The Coffee Shop</h1>
+        <h1 class="color-overlay text-center text-white m-1">The Coffee Shop</h1>
         <p class="color-overlay fst-italic text-white">¿Listo para despertar?</p>
       </div>
 
