--- a/vistas/nosotros.html
+++ b/vistas/nosotros.html
@@ -54,7 +54,7 @@
   </header>
 
   <main class="us">
-    <div class="Nosotros">
+    <div class="nosotros">
     <div class="container">
       <div class="row">
 
@@ -63,14 +63,14 @@
     <div class="col container-left">
     <figure class="figure">
         <img src="../assets/img/handsCoffeeBeans1.jpg" class="figure-img img-fluid rounded" width="600" data-aos="fade-down" role="img">
-        <rect width="100%" height="90%"></rect>
+        <rect width="100%" height="100%"></rect>
     </figure>
   </div>
     
     <div class="col container-right">
     <section>
-        <h2 class="text-center text-md-start">Conoce un poco mas sobre nosotros...</h2>
-        <p class="text-center text-md-start">En The Coffee Shop somos una empresa 100% mexicana que busca ofrecer a sus comensales lo mejor de nuestras raíces 
+        <h2 class="text-center text-lg-start px-3 text-wrap">Conoce un poco mas sobre nosotros...</h2>
+        <p class="text-center text-lg-start px-3 text-wrap">En The Coffee Shop somos una empresa 100% mexicana que busca ofrecer a sus comensales lo mejor de nuestras raíces 
           en cada taza de café. 
           <br>Podrás descubrir en cualquiera de nuestas 3 sucursales el sabor y aroma de nuestros campos.
           <br>Apoyamos a la industria mexicana de cafetaleros, únicamente servimos café mexicano de nuestros caficultores en zonas de Chiapas,
